openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tampavolunteers
  labels:
    app.kubernetes.io/name: tampavolunteers
    app.kubernetes.io/part-of: tampavolunteers-platform
